# game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_linux_clang.sh  doc.md  done.md  thoughts.md
assets/: backpack.mtl  bean.mtl  cone.mtl  light_bulb.mtl
badtl/: allocator.cpp  allocator.hpp  array.hpp  files.cpp  files.hpp  function.hpp  list.hpp  map.hpp  mat4.cpp  mat4.hpp  math.hpp  memory.hpp  print.hpp  ptr.hpp  result.hpp  string.cpp  string.hpp  templates.hpp  threads.cpp  threads.hpp  time.cpp  time.hpp  types.hpp  utils.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp
data/: ground.gent  keymap.gkey  light_bulb.gent  main.gscn  player.gent
engine/: action.hpp  assert.hpp  asset_manager.cpp  asset_manager.hpp  engine.hpp  event.hpp  gl_renderer.cpp  image.cpp  image.hpp  key.hpp  math.cpp  math.hpp  renderer.hpp  sdl3_gl_engine.cpp
engine/renderer/: camera.cpp  camera.hpp  gl_functions.cpp  gl_functions.hpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shaders.cpp  shaders.hpp  texture.cpp  texture.hpp  vertex.cpp  vertex.hpp
engine/utils/: assert.hpp  templates.hpp
game/: main.cpp
scripts/: find_error.py  find_todos.py
shaders/: default.frag  green.frag  lighting.frag  shader.frag  shader.vert  shadow_depth.frag  shadow_depth.geom  shadow_depth.vert  yellow.frag
src/: SDL_game.cpp  SDL_game.h  array.cpp  array.h  assets.c  assets.cpp  assets.h  core.cpp  ecs.cpp  ecs.h  entity.cpp  entity.h  error.c  error.cpp  error.h  event.h  game.c  game.cpp  game.h  gl_functions.cpp  gl_functions.h  gl_renderer.cpp  gl_renderer.h  image.c  image.cpp  image.h  items.cpp  items.h  main.cpp  mat4.cpp  mat4.h  math.c  math.cpp  math.h  memory.c  memory.cpp  memory.h  obj.c  obj.cpp  obj.h  (+31 more)
src/base/: array.cpp  array.h  base.cpp  base.h  enum_array.h  map.cpp  map.h  map_impl.h  math.cpp  math.h  memory.cpp  memory.h  spsc_queue.h  string.cpp  string.h  time.cpp  time.h  uuid.cpp  uuid.h  vertex.cpp  vertex.h
src/game/: assets.cpp  assets.h  camera.cpp  camera.h  entity.cpp  entity.h  game.cpp  game.h  image.cpp  image.h  keys.cpp  parser.cpp  parser.h  renderer.cpp  renderer.h  serializer.cpp  serializer.h  sound.cpp  sound.h  vertex.cpp  vertex.h
src/game/assets/: assets.cpp  assets.h  material.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.h  texture.cpp  texture.h
src/game/data/: data.cpp  data.h  gent.cpp  gent.h  gkey.cpp  gkey.h  gscn.cpp  gscn.h
src/game/renderer/: gl_renderer.cpp  renderer.cpp  renderer.h
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/os/: gl_functions.h  gl_functions_sdl3.cpp  os.h  os_sdl3.cpp
src/platform/: gl_functions.cpp  gl_functions.h  platform.h  sdl3_gl.cpp
src/tests/: tests.cpp
